[gd_scene load_steps=23 format=2]

[ext_resource path="res://spirits/dog/spirit-dog-exit.png" type="Texture" id=1]
[ext_resource path="res://UI/start screen/tile-brick.png" type="Texture" id=2]
[ext_resource path="res://spirits/dog/spirit-dog-talk.png" type="Texture" id=3]
[ext_resource path="res://UI/ui-talk-bubble.png" type="Texture" id=4]
[ext_resource path="res://Font/f-l-base-font-dynamic.tres" type="DynamicFont" id=5]
[ext_resource path="res://Images/object-gravestone.png" type="Texture" id=6]
[ext_resource path="res://UI/intro.gd" type="Script" id=7]
[ext_resource path="res://Images/defense-mud-wall-idle.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 483, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 414, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 345, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 276, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 207, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 138, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 69, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 69, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 71, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 71, 0, 71, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 142, 0, 71, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 213, 0, 71, 36 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 284, 0, 71, 36 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "enter",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "talk",
"speed": 5.0
} ]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1021.0
margin_bottom = 602.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spirit_dog" type="AnimatedSprite" parent="."]
position = Vector2( 123.653, 177.773 )
scale = Vector2( 3, 3 )
frames = SubResource( 15 )
animation = "enter"
centered = false

[node name="speech_bubble" type="TextureRect" parent="spirit_dog"]
margin_left = 67.5061
margin_top = -34.1485
margin_right = 202.506
margin_bottom = 18.8515
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speech1" type="RichTextLabel" parent="spirit_dog/speech_bubble"]
visible = false
margin_left = 5.0
margin_top = 6.0
margin_right = 129.0
margin_bottom = 33.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.231373, 0.207843, 0.207843, 1 )
text = "WHEN NO ONE  PLAYS WITH YOU, YOU MUST PLAY WITH YOURSELF
 - EINSTEIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speech2" type="RichTextLabel" parent="spirit_dog/speech_bubble"]
visible = false
margin_left = 5.0
margin_top = 6.0
margin_right = 129.0
margin_bottom = 33.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.231373, 0.207843, 0.207843, 1 )
text = "Man braid shabby chic tofu yuccie. Gentrify plaid pinterest taiyaki. Narwhal cray godard, tumblr "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speech3" type="RichTextLabel" parent="spirit_dog/speech_bubble"]
visible = false
margin_left = 5.0
margin_top = 6.0
margin_right = 129.0
margin_bottom = 33.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.231373, 0.207843, 0.207843, 1 )
text = "Quinoa banh mi pabst chicharrones, bushwick pitchfork VHS blog butcher trust fund. Craft beer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speech4" type="RichTextLabel" parent="spirit_dog/speech_bubble"]
margin_left = 5.0
margin_top = 6.0
margin_right = 129.0
margin_bottom = 33.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.231373, 0.207843, 0.207843, 1 )
text = "Chartreuse pour-over cred, brunch readymade VHS listicle keffiyeh selvage DIY slow-carb. Man "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_Button" type="Button" parent="spirit_dog/speech_bubble"]
margin_left = 121.982
margin_top = 24.3065
margin_right = 176.982
margin_bottom = 79.3065
rect_scale = Vector2( 0.128999, 0.142707 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 340.497
margin_top = 265.89
margin_right = 370.497
margin_bottom = 293.89
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skip_button" type="Button" parent="."]
margin_left = 500.25
margin_top = 280.0
margin_right = 573.25
margin_bottom = 312.0
text = "SKIP"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="spirit_dog/speech_bubble/Text_Button" to="." method="_on_Text_Button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="skip_button" to="." method="_on_skip_button_pressed"]
